--- a/cours/02_structures_conditionnelles/02_Structures_conditionnelles_slides.ipynb
+++ b/cours/02_structures_conditionnelles/02_Structures_conditionnelles_slides.ipynb
@@ -129,14 +129,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "parapluie\n",
+      "impermeable\n",
+      "Bonne journée !\n"
+     ]
+    }
+   ],
    "source": [
     "meteo = \"pluie\" \n",
     "if meteo == \"pluie\" : # vérifie si la variable meteo possède \"pluie\" comme valeur ou non\n",
@@ -208,13 +218,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "parapluie\n",
+      "imperméable\n",
+      "Bonne journée!\n"
+     ]
+    }
+   ],
    "source": [
     "meteo = \"pluie\" \n",
     "if meteo == \"pluie\" : # vérifie si la variable weather possède \"raining\" comme valeur ou non\n",
@@ -260,14 +280,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bonne journée !\n"
+     ]
+    }
+   ],
    "source": [
     "meteo = \"froid\"  \n",
     "if meteo == \"pluie\" :  \n",
@@ -317,14 +345,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t-shirt\n",
+      "shorts\n",
+      "Bonne journée !\n"
+     ]
+    }
+   ],
    "source": [
     "meteo = \"froid\" \n",
     "if meteo == \"pluie\": #  vérifie si la variable meteo possède \"pluie\" comme valeur ou non \n",
@@ -361,14 +399,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "parapluie\n",
+      "impermeable\n",
+      "Bonne journée !\n"
+     ]
+    }
+   ],
    "source": [
     "meteo = \"pluie\" \n",
     "if meteo == \"pluie\" : \n",
@@ -429,14 +477,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pull\n",
+      "echarpe\n",
+      "Bonne journée !\n"
+     ]
+    }
+   ],
    "source": [
     "meteo = \"froid\"\n",
     "if meteo == \"pluie\" : #  vérifie si meteo a \"pluie\" comme valeur ou non \n",
@@ -527,13 +585,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (Temp/ipykernel_24660/3243762281.py, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\Thelma\\AppData\\Local\\Temp/ipykernel_24660/3243762281.py\"\u001b[1;36m, line \u001b[1;32m5\u001b[0m\n\u001b[1;33m    elif meteo == \"froid\" or meteo == \"venteux\" : # sinon vérifie si meteo vaut \"froid\" ou \"venteux\"\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "meteo = \"froid\" \n",
     "if meteo == \"froid\" : #  vérifie si meteo a \"froid\" comme valeur ou non \n",
@@ -619,13 +686,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Go to Pizza Hut!\n"
+     ]
+    }
+   ],
    "source": [
     "envie = \"pizza\"\n",
     "if envie == \"tacos\":\n",
@@ -649,13 +724,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "manteau\n",
+      "echarpe\n",
+      "Bonne journée !\n"
+     ]
+    }
+   ],
    "source": [
     "meteo = \"froid\"\n",
     "if meteo == \"pluie\" :  \n",
@@ -683,13 +768,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t-shirt\n",
+      "shorts\n",
+      "manteau\n",
+      "echarpe\n",
+      "Bonne journée !\n"
+     ]
+    }
+   ],
    "source": [
     "meteo = \"froid\"\n",
     "if meteo == \"pluie\" : \n",
@@ -750,14 +847,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Transaction impossible\n",
+      "Fin\n"
+     ]
+    }
+   ],
    "source": [
     "solde = 20.0\n",
     "prix_achat_hors_taxe = 19.0\n",
@@ -860,14 +966,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "manteau\n",
+      "Fin\n"
+     ]
+    }
+   ],
    "source": [
     "meteo = \"froid\"  \n",
     "if meteo == \"froid\" or meteo ==\"venteux\" : # vérifie si meteo est froid ou bien venteux. \n",
@@ -922,13 +1037,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fin\n"
+     ]
+    }
+   ],
    "source": [
     "x = 0\n",
     "if x != 0 and 2 // x == 2 :\n",
@@ -938,15 +1061,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test de l'évaluation paresseuse.\n",
+      "Fin\n"
+     ]
+    }
+   ],
    "source": [
-    "x = 0\n",
+    "x = 1\n",
     "if 2 // x == 2 and x != 0:\n",
     "    print(\"Test de l'évaluation paresseuse.\")\n",
     "print(\"Fin\")"
@@ -965,13 +1097,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test de l'évaluation paresseuse.\n",
+      "Fin\n"
+     ]
+    }
+   ],
    "source": [
     "x = 0\n",
     "if x == 0 or 2 // x == 2:\n",
@@ -981,13 +1122,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "integer division or modulo by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_24660/453130627.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mif\u001b[0m \u001b[1;36m2\u001b[0m \u001b[1;33m//\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m2\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Test de l'évaluation paresseuse.\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Fin\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mZeroDivisionError\u001b[0m: integer division or modulo by zero"
+     ]
+    }
+   ],
    "source": [
     "x = 0\n",
     "if 2 // x == 2 or x == 0:\n",
@@ -1008,14 +1161,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Transaction approuvée\n",
+      "Fin\n"
+     ]
+    }
+   ],
    "source": [
     "solde = 20.0\n",
     "taxe = 1.08\n",
@@ -1094,14 +1256,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Transaction non approuvée : vendeur non autorisé\n",
+      "Fin\n"
+     ]
+    }
+   ],
    "source": [
     "solde = 20.0\n",
     "taxe = 1.08\n",
@@ -1156,14 +1327,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num2 est plus grand que num1!\n",
+      "Fin\n"
+     ]
+    }
+   ],
    "source": [
     "num1 = 1\n",
     "num2 = 2 \n",
@@ -1246,13 +1426,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Je suis un adolescent!\n"
+     ]
+    }
+   ],
    "source": [
     "age = 17\n",
     "if age >= 18 : \n",
@@ -1274,13 +1462,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Votre candidature n'a pas été acceptée.\n"
+     ]
+    }
+   ],
    "source": [
     "acceptes = [\"Marie\", \"Leo\", \"Kenza\", \"Gabriel\"]\n",
     "liste_attente = [\"Lucie\", \"Dris\", \"Emma\"]\n",
@@ -1307,18 +1503,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'status_vote' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_24660/2191853201.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mmon_age\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[1;36m18\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mstatus_vote\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstatus_vote\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'status_vote' is not defined"
+     ]
+    }
+   ],
    "source": [
     "mon_age = 17\n",
     "if mon_age >= 18:\n",
     "    status_vote = True\n",
     "print(status_vote)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "on n'a pas défini statut_vote donc ligne 3 pose problème"
    ]
   },
   {
@@ -1373,14 +1588,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "oui, dans le premier, si le if n'est pas vrai alors on a forcément n=2*n\n",
+    "dans le deuxième, n=2*n que si le deuxieme if est vrai"
+   ]
   }
  ],
  "metadata": {
   "celltoolbar": "Diaporama",
+  "interpreter": {
+   "hash": "ae71230639ab4a4897a0a7d840b3da0aa7ae116a7420052ce92ef4319b712ad0"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.9.7 64-bit ('l1-python': conda)",
    "name": "python3"
   },
   "language_info": {
@@ -1393,7 +1613,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
