--- a/cours/03_structures_iteratives/03_structures_iteratives.ipynb
+++ b/cours/03_structures_iteratives/03_structures_iteratives.ipynb
@@ -129,13 +129,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Afficher les valeurs dans l'intervalle:\n",
+      "i = 1\n",
+      "i = 2\n",
+      "i = 3\n",
+      "i = 4\n",
+      "i = 5\n",
+      "i = 6\n",
+      "i = 7\n",
+      "i = 8\n",
+      "i = 9\n",
+      "i = 10\n",
+      "Terminé\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Afficher les valeurs dans l'intervalle:\")\n",
     "for i in range(1, 11) :\n",
@@ -192,13 +211,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Afficher les valeurs dans l intervalle:\n",
+      "i = 0\n",
+      "i = 1\n",
+      "i = 2\n",
+      "i = 3\n",
+      "i = 4\n",
+      "i = 5\n",
+      "i = 6\n",
+      "i = 7\n",
+      "i = 8\n",
+      "i = 9\n",
+      "i = 10\n",
+      "Terminé\n"
+     ]
+    }
+   ],
    "source": [
     "print('Afficher les valeurs dans l intervalle:')\n",
     "for i in range(11) :\n",
@@ -221,13 +260,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Afficher les valeurs dans l intervalle:\n",
+      "i = 3\n",
+      "i = 5\n",
+      "i = 7\n",
+      "Terminé\n"
+     ]
+    }
+   ],
    "source": [
     "print('Afficher les valeurs dans l intervalle:')\n",
     "for i in range(3, 9, 2) :\n",
@@ -237,13 +288,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Afficher les valeurs dans l intervalle:\n",
+      "i = 4\n",
+      "i = 3\n",
+      "i = 2\n",
+      "Terminé\n",
+      "Help on class range in module builtins:\n",
+      "\n",
+      "class range(object)\n",
+      " |  range(stop) -> range object\n",
+      " |  range(start, stop[, step]) -> range object\n",
+      " |  \n",
+      " |  Return an object that produces a sequence of integers from start (inclusive)\n",
+      " |  to stop (exclusive) by step.  range(i, j) produces i, i+1, i+2, ..., j-1.\n",
+      " |  start defaults to 0, and stop is omitted!  range(4) produces 0, 1, 2, 3.\n",
+      " |  These are exactly the valid indices for a list of 4 elements.\n",
+      " |  When step is given, it specifies the increment (or decrement).\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __bool__(self, /)\n",
+      " |      self != 0\n",
+      " |  \n",
+      " |  __contains__(self, key, /)\n",
+      " |      Return key in self.\n",
+      " |  \n",
+      " |  __eq__(self, value, /)\n",
+      " |      Return self==value.\n",
+      " |  \n",
+      " |  __ge__(self, value, /)\n",
+      " |      Return self>=value.\n",
+      " |  \n",
+      " |  __getattribute__(self, name, /)\n",
+      " |      Return getattr(self, name).\n",
+      " |  \n",
+      " |  __getitem__(self, key, /)\n",
+      " |      Return self[key].\n",
+      " |  \n",
+      " |  __gt__(self, value, /)\n",
+      " |      Return self>value.\n",
+      " |  \n",
+      " |  __hash__(self, /)\n",
+      " |      Return hash(self).\n",
+      " |  \n",
+      " |  __iter__(self, /)\n",
+      " |      Implement iter(self).\n",
+      " |  \n",
+      " |  __le__(self, value, /)\n",
+      " |      Return self<=value.\n",
+      " |  \n",
+      " |  __len__(self, /)\n",
+      " |      Return len(self).\n",
+      " |  \n",
+      " |  __lt__(self, value, /)\n",
+      " |      Return self<value.\n",
+      " |  \n",
+      " |  __ne__(self, value, /)\n",
+      " |      Return self!=value.\n",
+      " |  \n",
+      " |  __reduce__(...)\n",
+      " |      Helper for pickle.\n",
+      " |  \n",
+      " |  __repr__(self, /)\n",
+      " |      Return repr(self).\n",
+      " |  \n",
+      " |  __reversed__(...)\n",
+      " |      Return a reverse iterator.\n",
+      " |  \n",
+      " |  count(...)\n",
+      " |      rangeobject.count(value) -> integer -- return number of occurrences of value\n",
+      " |  \n",
+      " |  index(...)\n",
+      " |      rangeobject.index(value) -> integer -- return index of value.\n",
+      " |      Raise ValueError if the value is not present.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Static methods defined here:\n",
+      " |  \n",
+      " |  __new__(*args, **kwargs) from builtins.type\n",
+      " |      Create and return a new object.  See help(type) for accurate signature.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors defined here:\n",
+      " |  \n",
+      " |  start\n",
+      " |  \n",
+      " |  step\n",
+      " |  \n",
+      " |  stop\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print('Afficher les valeurs dans l intervalle:')\n",
     "for i in range(4, 1, -1) :\n",
@@ -265,13 +412,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Avant addition i = 1\n",
+      "Après addition i = 2\n",
+      "Avant addition i = 4\n",
+      "Après addition i = 5\n",
+      "Avant addition i = 7\n",
+      "Après addition i = 8\n",
+      "Avant addition i = 10\n",
+      "Après addition i = 11\n",
+      "Dernière valeur, i = 11\n",
+      "Terminé\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(1, 11, 3) :\n",
     "    print(\"Avant addition i =\", i)\n",
@@ -309,13 +473,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La somme vaut : 3\n"
+     ]
+    }
+   ],
    "source": [
     "n = int(input(\"Entrez un nombre :\"))\n",
     "result = 0\n",
@@ -339,13 +511,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La moyenne de [23, 43, 56, 22, 109, 34] vaut 47.833333333333336\n"
+     ]
+    }
+   ],
    "source": [
     "liste_de_nombres = [23, 43, 56, 22, 109, 34]\n",
     "sum = 0\n",
@@ -421,13 +601,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i = 1\n",
+      "i = 2\n",
+      "i = 3\n",
+      "i = 4\n",
+      "i = 5\n",
+      "i = 6\n",
+      "i = 7\n",
+      "i = 8\n",
+      "i = 9\n",
+      "Terminé\n"
+     ]
+    }
+   ],
    "source": [
     "i = 1\n",
     "while i < 10 : \n",
@@ -464,11 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sum = 0\n",
@@ -496,6 +689,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "le programme ne s'arrête jamais"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -509,13 +709,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
+   "source": [
+    "**Toute boucle *for* peut être écrite sous la forme d'une boucle *while*.**\n",
+    "\n",
+    "Exemple : "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# To random library: https://docs.python.org/3/library/random.html\n",
@@ -535,27 +744,22 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "**Toute boucle *for* peut être écrite sous la forme d'une boucle *while*.**\n",
-    "\n",
-    "Exemple : "
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Programmer c est cool!\n",
+      "Programmer c est cool!\n",
+      "Programmer c est cool!\n",
+      "Programmer c est cool!\n",
+      "Programmer c est cool!\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "for i in range (1, 6) :\n",
     "    print('Programmer c est cool!')"
@@ -563,13 +767,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Programmer c est cool!\n",
+      "Programmer c est cool!\n",
+      "Programmer c est cool!\n",
+      "Programmer c est cool!\n",
+      "Programmer c est cool!\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "i =  0 \n",
     "while (i < 5) :\n",
@@ -824,9 +1036,11 @@
  ],
  "metadata": {
   "celltoolbar": "Diaporama",
+  "interpreter": {
+   "hash": "ae71230639ab4a4897a0a7d840b3da0aa7ae116a7420052ce92ef4319b712ad0"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.9.7 64-bit ('l1-python': conda)",
    "name": "python3"
   },
   "language_info": {
@@ -839,7 +1053,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
