--- a/exercises/TD02_structures_controle/02_structures_controle.ipynb
+++ b/exercises/TD02_structures_controle/02_structures_controle.ipynb
@@ -42,14 +42,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "facteur\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1 = 15\n",
+    "num2 = 5\n",
+    "if num1 % num2 == 0 or num2 % num1:\n",
+    "    print(\"facteur\")\n",
+    "else:\n",
+    "    print(\"no factors\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -70,14 +85,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "School is cancelled\n"
+     ]
+    }
+   ],
+   "source": [
+    "state = \"Georgia\"\n",
+    "if state == \"New Jersey\":\n",
+    "    print(\"School isn't cancelled\")\n",
+    "elif state == \"North Carolina\":\n",
+    "    print(\"School is postponed\")\n",
+    "elif state == \"Georgia\":\n",
+    "    print(\"School is cancelled\")\n",
+    "else:\n",
+    "    print(\"School's status is unknown\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -108,14 +141,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'annee' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_15964/2204531781.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mnoSigne\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mannee\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m1900\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;36m12\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'annee' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "annee = int(input(\"votre annee naissance\"))\n",
+    "noSigne = (annee -1900 + 4) % 12"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -132,14 +180,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Freezing\n"
+     ]
+    }
+   ],
+   "source": [
+    "temperature = -3.7\n",
+    "celsius = True\n",
+    "if celsius:\n",
+    "    if temperature > 0:\n",
+    "        print (\"Not freezing\")\n",
+    "    else:\n",
+    "        print (\"Freezing\")\n",
+    "else:\n",
+    "    if temperature > 32:\n",
+    "        print (\"Not freezing\")\n",
+    "    else:\n",
+    "        print (\"Freezing\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Freezing\n"
+     ]
+    }
+   ],
+   "source": [
+    "temperature = float(input(\"temperature ?\"))\n",
+    "cel = input(\"celcius ?\")\n",
+    "celsius = (cel == \"True\") or (cel == \"true\") # celsius = cel in (\"True\", \"true\", \"t\", \"vrai\", \"vrai\")\n",
+    "if celsius:\n",
+    "    if temperature > 0:\n",
+    "        print (\"Not freezing\")\n",
+    "    else:\n",
+    "        print (\"Freezing\")\n",
+    "else:\n",
+    "    if temperature > 32:\n",
+    "        print (\"Not freezing\")\n",
+    "    else:\n",
+    "        print (\"Freezing\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -157,16 +255,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "annee bissextile\n"
+     ]
+    }
+   ],
+   "source": [
+    "annee = int(input(\"annee?\"))\n",
+    "if (annee % 4 ==0) and ((annee % 100 != 0) or (a % 400 == 0)):\n",
+    "    print (\"annee bissextile\")\n",
+    "else:\n",
+    "    print (\"annee non bissextible\")\n"
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "---\n",
     "\n",
@@ -176,43 +290,173 @@
     "\n",
     "1. Ecrire un programme qui permet d'afficher tous les nombres entre 1 et 10 (bornes incluses).\n",
     "2. Ecrire un programme se limitant à la boucle *for* qui permet d'afficher tous les nombres pairs entre 1 et 20 (bornes incluses). Proposer une deuxième solution en incluant une structure conditionnelle."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "range(1, 11)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
    ],
-   "cell_type": "markdown",
-   "metadata": {}
+   "source": [
+    "for i in range(1, 11):\n",
+    "    print(i)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "2) 2 manières"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n",
+      "18\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range (1, 21):\n",
+    "    if i % 2 == 0:\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n",
+      "18\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(2, 21, 2):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Exercice 7:**\n",
     "    \n",
     "1. Ecrire un programme qui demande à l'utilisateur de saisir *n* nombres, *n* étant choisi par l'utilisateur, puis d'afficher la moyenne de ces nombres.\n",
     "\n",
     "2. Même question, mais l'utilisateur ne choisit pas à l'avance le nombre *n*, la procédure s'arrête quand il saisit le nombre -1.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "Interrupted by user",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_2848/3837204178.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0msum\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mv\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\" v ?\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[0msum\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msum\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mv\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\envs\\l1-python\\lib\\site-packages\\ipykernel\\kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[1;34m(self, prompt)\u001b[0m\n\u001b[0;32m   1004\u001b[0m                 \u001b[1;34m\"raw_input was called, but this frontend does not support input requests.\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1005\u001b[0m             )\n\u001b[1;32m-> 1006\u001b[1;33m         return self._input_request(\n\u001b[0m\u001b[0;32m   1007\u001b[0m             \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprompt\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1008\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"shell\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\envs\\l1-python\\lib\\site-packages\\ipykernel\\kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[1;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[0;32m   1049\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1050\u001b[0m                 \u001b[1;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1051\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Interrupted by user\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1052\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1053\u001b[0m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Invalid Message:\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
+     ]
+    }
    ],
+   "source": [
+    "n = int(input(\" n ?\"))\n",
+    "sum = 0\n",
+    "for i in range(n):\n",
+    "    v = int(input(\" v ?\"))\n",
+    "    sum = sum + v\n",
+    "print(sum/n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sum = 0.0\n",
+    "n = 0\n",
+    "v = 0\n",
+    "while v != -1:\n",
+    "    v = int(input(\"val ?\"))\n",
+    "    if v != -1:\n",
+    "        sum = sum + v\n",
+    "        n += 1\n",
+    "if n > 0:\n",
+    "print(sum/n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sum = 0.0\n",
+    "n = 0\n",
+    "\n",
+    "while True:\n",
+    "    v = int(input(\"val ?\"))\n",
+    "    if v != -1:\n",
+    "        break\n",
+    "        \n",
+    "    sum = sum + v\n",
+    "    n += 1\n",
+    "if n > 0:\n",
+    "    print(sum/n)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "source": [
     "**Exercice 8:**\n",
     "\n",
@@ -221,23 +465,50 @@
     "\n",
     "1. Une première version en utilisant la boucle *for*\n",
     "2. Une seconde version en utilisant la boucle *while*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n"
+     ]
+    }
    ],
-   "cell_type": "markdown",
-   "metadata": {}
+   "source": [
+    "n = int(input(\"n ? \"))\n",
+    "f = 1\n",
+    "for i in range(1, n+1):\n",
+    "    f = f * i \n",
+    "print(f)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "720\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"n ?\"))\n",
+    "f = 1\n",
+    "while n > 0:\n",
+    "    f = f * n\n",
+    "    n = n - 1\n",
+    "print(f)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -298,40 +569,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'gain' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_2848/4080895160.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;32melif\u001b[0m \u001b[0mn\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mnb\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mn\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mnb\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m     \u001b[0mgain\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 21\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"vous avez gagné\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgain\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'gain' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "n = input(\"donner deux chiffres ?\")\n",
+    "\n",
+    "if len(n) == 0:\n",
+    "    n = \"00\"\n",
+    "elif len(n) == 1:\n",
+    "    n = '0' + n\n",
+    "\n",
+    "al = random.randint(10, 99)\n",
+    "if al < 10:\n",
+    "    nb = '0' + str(al)\n",
+    "else:\n",
+    "    nb = str(al)\n",
+    "\n",
+    "if n[0] == nb[0] and n[1] == nb[1]:\n",
+    "    gain = 10\n",
+    "elif n[0] == nb[1] and n[1] == nb[0]:\n",
+    "    gain = 5\n",
+    "elif n[0] in nb or n[1] in nb:\n",
+    "    gain = 1\n",
+    "print(\"vous avez gagné\", gain)\n"
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Exercice 11:**\n",
     "    \n",
     "Ecrire un programme qui permet de calculer la somme des chiffres d'un entier *n* donné. Le nombre *n* doit être compris entre 10 et 20 (bornes incluses)."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = input(\"donner deux chiffres ?\")\n",
+    "\n",
+    "sum = 0\n",
+    "\n",
+    "for c in n:\n",
+    "    sum = sum + int(c)\n",
+    "\n",
+    "print(sum)"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = input(\"donner deux chiffres ?\")\n",
+    "print(int(n[0]) + int(n[1]))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Exercice 12:**\n",
     "\n",
     "1. Ecrire un programme qui permet de générer aléatoirement deux nombres entre 0 et 9, de calculer leurs différences (en valeur absolue), puis d'inviter l'utilisateur à répondre à la question suivante *que vaut abs(number1 - number2)?*. Le programme doit permettre à l'utilisateur de répondre plusieurs fois jusqu'à la saisie de la bonne réponse.\n",
     "2. Modifier le programme précédent de telle sorte qu'il génère cinq occurences à la suite invitant à répondre à la question précédente. A la fin, le programme affiche le nombre moyen de tentatives qu'il a fallu à l'utilisateur pour répondre à une question."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -354,13 +694,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Exercice 13:**\n",
     "\n",
     "Ecrire un programme qui permet de calculer le nombre de mots dans une phrase saisie par l'utilisateur."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -488,6 +828,8 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Exercice 17:**\n",
     "\n",
@@ -500,9 +842,7 @@
     "*****\n",
     "******\n",
     "```"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -514,6 +854,8 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Exercice 18:**\n",
     "\n",
@@ -526,9 +868,7 @@
     " *****\n",
     "******\n",
     "```"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -540,13 +880,13 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Exercice 19:**\n",
     "\n",
     "Ecrire un programme qui calcule, étant donné un entier *n* rentré par l'utilisateur, la plus grande puissance de *n* inférieure à un million."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -560,9 +900,11 @@
  ],
  "metadata": {
   "celltoolbar": "Diaporama",
+  "interpreter": {
+   "hash": "ae71230639ab4a4897a0a7d840b3da0aa7ae116a7420052ce92ef4319b712ad0"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.9.7 64-bit ('l1-python': conda)",
    "name": "python3"
   },
   "language_info": {
@@ -575,7 +917,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6-final"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
